--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <a class="current-link  link" href="index.html">Студия</a>
                     </li>
                     <li class="menu-item">
-                        <a href="./portfolio.html">Портфолио</a>
+                        <a class="menu-link link" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="menu-item">
-                        <a href="">Контакты</a>
+                        <a class="menu-link link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
