--- a/index.html
+++ b/index.html
@@ -122,20 +122,26 @@
                     <li class="work-img-item">
                         <div class="work-img-wrapper">
                             <img class="work-img-item-img" src="./images/about/gallery-img-1.jpg" alt="набираем код" width="370" height="294">
-                            <p class="work-overlay">Десктопные приложения</p>
-                        </div>
+                            <div class="work-label">
+                                <p>Десктопные приложения</p>
+                             </div>
+                         </div>
                     </li>
                     <li class="work-img-item">
                         <div class="work-img-wrapper">
                         <img class="work-img-item-img" src="./images/about/gallery-img-2.jpg" alt="проверяем роботу телефона" width="370" height="294">
-                            <p class="work-overlay">Мобильные приложения</p>
+                            <div class="work-label">
+                                <p>Мобильные приложения</p>
+                            </div>
                         </div>
                         
                     </li>
                     <li class="work-img-item">
                         <div class="work-img-wrapper">
                             <img class="work-img-item-img" src="./images/about/gallery-img-3.jpg" alt="смотрим на екран телефона" width="370"  height="294">
-                            <p class="work-overlay">Дизайнерские решения</p>
+                            <div class="work-label">   
+                                <p>Дизайнерские решения</p>
+                            </div>
                         </div>
                         
                     </li>
