--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
                 <ul class="projects list ">
                     <li class="projects-list ">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-1.jpg" alt="сайт" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
@@ -94,7 +94,7 @@
                     </li>
                         
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-2.jpg" alt="постер команд" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-3.jpg" alt="ресторан" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -122,7 +122,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-4.jpg" alt="наушники" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -136,7 +136,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-5.jpg" alt="проекты" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -150,7 +150,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-6.jpg" alt="компьютер" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -164,7 +164,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                         <img class="project-link-img" src="./images/portfolio/portfolio-img-7.jpg" alt="книга" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -178,7 +178,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="prjoject-link-img" src="./images/portfolio/portfolio-img-8.jpg" alt="проекты" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
@@ -192,7 +192,7 @@
                         </a>
                     </li>
                     <li class="projects-list">
-                        <a class="projects-list-link-wrapper link">
+                        <a class="projects-list-link-wrapper link" href="">
                         <div class="projects-list-img-wrapper">
                             <img class="project-link-img" src="./images/portfolio/portfolio-img-9.jpg" alt="приложения" width="370" height="294">
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту
